reactive schedulers tests